# withiris

./: .gitignore  CHANGELOG.md  README.md  mise.toml
.github/workflows/: deploy-pages.yml
cli/: README.md  pyproject.toml
cli/src/iris_cli/: config.py  crypto.py  main.py  setup.py
cli/tests/: test_config.py  test_push.py  test_remove.py  test_setup.py  test_status.py
demo/: CLAUDE.md  index.html  start.sh
demo/.claude/: settings.json
pages/: index.html  package-lock.json  package.json  privacy.html  wrangler.toml
relay/: package-lock.json  package.json  tsconfig.json  wrangler.toml
relay/src/: apns.ts  auth.ts  errors.ts  handlers.ts  index.ts  rate-limit.ts  tokens.ts
relay/test/: relay.test.ts
