[project]
name = "withiris"
version = "0.4.0"
description = "CLI client for Iris - E2E encrypted screenshot relay"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "asonas" },
]
dependencies = [
    "cryptography>=44.0",
    "httpx>=0.28",
    "qrcode>=8.0",
]

[project.urls]
Homepage = "https://github.com/asonas/withiris"
Repository = "https://github.com/asonas/withiris"

[project.scripts]
iris = "iris_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iris_cli"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
